--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ p {
 /* ```````````````````````` */
 .top-banner {
     /* width: 100%; */
-    background: url('../bg.jpg') no-repeat center;
+    background: url('bg.jpg') no-repeat center;
     background-size: cover;
     padding: 16.875rem 0 9.375rem;
 
@@ -322,7 +322,7 @@ Food Type Section Design
 .story-section {
     width: 100%;
     height: 28.125rem;
-    background: url('../imgg-5.jpeg') no-repeat center;
+    background: url('imgg-5.jpeg') no-repeat center;
     background-size: cover;
     padding-top: 100px;
     text-align: center;
@@ -429,7 +429,7 @@ testimonial section design
 
 .book-food {
     width: 100%;
-   background: url('../Rasp.jpg') no-repeat center;
+   background: url('Rasp.jpg') no-repeat center;
     background-size: cover;
     background-attachment: fixed;
     background-position: 0 71.9125px;
